<resources>
    <string name="app_name">Form</string>
    <string name="regnrHint">Registreringsnummer</string>
    <string name="companyNameHint">Företag</string>
    <string name="AdressHint">Adress</string>
    <string name="postNummerHint">Post Nummer</string>
    <string name="ortHint">Ort</string>
    <string name="epostHint">Epost</string>
    <string name="telefonHint">Telefon</string>
    <string name="infoBackButtonText">Back</string>
    <string name="infoDoneButtonText">Done</string>
    <string name="besiktningText">Besiktning</string>
    <string name="monteringText">Montering</string>
    <string name="demonteringText">Demontering</string>
    <string name="ndring_av_taxaText">Ändring av Taxa</string>
    <string name="fels_kning_av_taxameterText">Felsökning av Taxameter</string>
    <string name="grund_prisText">Grund Pris</string>
    <string name="kr_kmText">KR/KM</string>
    <string name="kr_timText">KR/TIM</string>
    <string name="backText">Back</string>
    <string name="text_f_r_tariff_1Text">Text för Tariff 1</string>
    <string name="_50Text">50</string>
    <string name="m2ButtonText">M2</string>
    <string name="c30ButtonText">C30</string>
    <string name="digitaxButtonText">Digitax</string>
    <string name="megtaxButtonText">Megtax</string>
    <string name="backButtonText">Back</string>
    <string name="avgPriceButtonText">Hämta Pris</string>
    <string name="basePriceTextView2">Grund Pris</string>
    <string name="tariffText">Text för Tariff</string>
    <string name="nextButtonText">Nästa</string>
    <string name="completeButtonText">Klar</string>
    <string name="orgnr">Organization number</string>
    <string name="menu1button">Arbete</string>
    <string name="menu2button">Information</string>
    <string name="menu3button">Taxameter</string>
    <string name="menu4button">Tarrif</string>
    <string name="menu5button">Summering</string>
</resources>
