<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreen">

    <Button
        android:id="@+id/inspectionButton"
        android:layout_width="600dp"
        android:layout_height="174dp"
        android:text="@string/besiktningText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10" />

    <Button
        android:id="@+id/installationButton"
        android:layout_width="600dp"
        android:layout_height="174dp"
        android:text="@string/monteringText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inspectionButton" />

    <Button
        android:id="@+id/demontageButton"
        android:layout_width="600dp"
        android:layout_height="174dp"
        android:text="@string/demonteringText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/installationButton" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="60dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="300dp" />

    <Button
        android:id="@+id/Menu1arbete"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/menu1button"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/Menu2arbete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Menu2arbete"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/menu2button"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/Menu3arbete"
        app:layout_constraintStart_toEndOf="@+id/Menu1arbete"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Menu3arbete"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/menu3button"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/Menu4arbete"
        app:layout_constraintStart_toEndOf="@+id/Menu2arbete"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Menu4arbete"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/menu4button"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/Menu5arbete"
        app:layout_constraintStart_toEndOf="@+id/Menu3arbete"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Menu5arbete"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/menu5button"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Menu4arbete"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>