<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformationScreen">

    <EditText
        android:id="@+id/regNrField"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:ems="10"
        android:freezesText="false"
        android:hint="@string/regnrHint"
        android:inputType="textPersonName|textCapCharacters"
        android:maxLength="6"
        android:nextFocusDown="@id/orgnrField"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/companyNameField"
        app:layout_constraintEnd_toStartOf="@+id/orgnrField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/companyNameField"
        android:layout_width="600dp"
        android:layout_height="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/companyNameHint"
        android:inputType="textPersonName|textCapSentences"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/adressField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regNrField" />

    <EditText
        android:id="@+id/adressField"
        android:layout_width="600dp"
        android:layout_height="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/AdressHint"
        android:inputType="textPersonName|textCapSentences"
        app:layout_constraintBottom_toTopOf="@+id/postnrField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyNameField" />

    <EditText
        android:id="@+id/postnrField"
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/postNummerHint"
        android:inputType="number"
        android:maxLength="5"
        android:nextFocusDown="@id/ortField"
        app:layout_constraintBottom_toTopOf="@+id/emailField2"
        app:layout_constraintEnd_toStartOf="@+id/ortField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adressField" />

    <EditText
        android:id="@+id/ortField"
        android:layout_width="380dp"
        android:layout_height="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ortHint"
        android:inputType="textPersonName|textCapSentences"
        app:layout_constraintBottom_toTopOf="@+id/emailField2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/postnrField"
        app:layout_constraintTop_toBottomOf="@+id/adressField" />

    <EditText
        android:id="@+id/emailField2"
        android:layout_width="600dp"
        android:layout_height="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/epostHint"
        android:inputType="textWebEmailAddress|textCapSentences"
        app:layout_constraintBottom_toTopOf="@+id/phoneField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ortField" />

    <EditText
        android:id="@+id/phoneField"
        android:layout_width="600dp"
        android:layout_height="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/telefonHint"
        android:inputType="phone"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailField2" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_width="427dp"
        android:layout_height="50dp"
        android:layout_marginTop="252dp"
        android:layout_marginBottom="60dp"
        android:indeterminate="false"
        android:max="8"
        android:progress="0"
        android:progressTint="#FF0000"
        android:scrollbarSize="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneField" />

    <Button
        android:id="@+id/infoBackButton"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="23dp"
        android:text="@string/infoBackButtonText"
        app:layout_constraintBottom_toTopOf="@+id/companyNameField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/orgnrField"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/infoDoneButton"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="253dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="59dp"
        android:text="@string/infoDoneButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/progressBar2"
        app:layout_constraintTop_toBottomOf="@+id/phoneField" />

    <EditText
        android:id="@+id/orgnrField"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="62dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/orgnr"
        android:inputType="number"
        android:maxLength="10"
        android:nextFocusDown="@id/companyNameField"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/companyNameField"
        app:layout_constraintEnd_toStartOf="@+id/infoBackButton"
        app:layout_constraintStart_toEndOf="@+id/regNrField"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>