<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".summeryScreen">

    <Button
        android:id="@+id/nextButton"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="100dp"
        android:text="@string/completeButtonText"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/getTestButton"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="112dp"
        android:text="Get"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="300dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="459dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="80dp" />

    <TextView
        android:id="@+id/companyNameSum"
        android:layout_width="0dp"
        android:layout_height="19dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/guideline6"
        tools:text="companyName" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="42dp" />

    <TextView
        android:id="@+id/orgnrFieldSum"
        android:layout_width="200dp"
        android:layout_height="19dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/companyNameSum"
        tools:text="orgNr" />

    <TextView
        android:id="@+id/regnrFieldSum"
        android:layout_width="200dp"
        android:layout_height="19dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/orgnrFieldSum"
        tools:text="regnr" />

    <TextView
        android:id="@+id/adressFieldSum"
        android:layout_width="200dp"
        android:layout_height="19dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/regnrFieldSum"
        tools:text="adress" />

    <TextView
        android:id="@+id/postnrFieldSum"
        android:layout_width="60dp"
        android:layout_height="19dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/adressFieldSum"
        tools:text="postnr" />

    <TextView
        android:id="@+id/ortFieldSum"
        android:layout_width="150dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/postnrFieldSum"
        app:layout_constraintTop_toBottomOf="@+id/adressFieldSum"
        tools:text="ort" />

    <TextView
        android:id="@+id/emailFieldSum"
        android:layout_width="162dp"
        android:layout_height="19dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/postnrFieldSum"
        tools:text="email" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="310dp" />

    <TextView
        android:id="@+id/testField"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="0.0"
        tools:text="testField" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="555dp" />

    <TextView
        android:id="@+id/typeSum"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:gravity="right"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        tools:text="type" />

    <TextView
        android:id="@+id/modelSum"
        android:layout_width="90dp"
        android:layout_height="19dp"
        android:layout_marginTop="28dp"
        android:gravity="right"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        tools:text="model" />

    <TextView
        android:id="@+id/telefonSum"
        android:layout_width="162dp"
        android:layout_height="19dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/emailFieldSum"
        tools:text="telefon" />

    <TextView
        android:id="@+id/tarrifSum1"
        android:layout_width="90dp"
        android:layout_height="19dp"
        android:layout_marginTop="10dp"
        android:gravity="right"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/modelSum"
        tools:text="tarrif1" />

    <TextView
        android:id="@+id/tarrifSum2"
        android:layout_width="90dp"
        android:layout_height="19dp"
        android:layout_marginTop="10dp"
        android:gravity="right"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/tarrifSum1"
        tools:text="tarrif2" />

    <TextView
        android:id="@+id/tarrifSum3"
        android:layout_width="90dp"
        android:layout_height="19dp"
        android:layout_marginTop="10dp"
        android:gravity="right"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/tarrifSum2"
        tools:text="tarrif3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="60dp" />

    <Button
        android:id="@+id/menu1summery"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/menu1button"
        app:layout_constraintBottom_toTopOf="@+id/guideline17"
        app:layout_constraintEnd_toStartOf="@+id/menu2summery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/menu2summery"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/menu2button"
        app:layout_constraintBottom_toTopOf="@+id/guideline17"
        app:layout_constraintEnd_toStartOf="@+id/menu3summery"
        app:layout_constraintStart_toEndOf="@+id/menu1summery"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/menu3summery"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/menu3button"
        app:layout_constraintBottom_toTopOf="@+id/guideline17"
        app:layout_constraintEnd_toStartOf="@+id/menu4summery"
        app:layout_constraintStart_toEndOf="@+id/menu2summery"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/menu4summery"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/menu4button"
        app:layout_constraintBottom_toTopOf="@+id/guideline17"
        app:layout_constraintEnd_toStartOf="@+id/menu5summery"
        app:layout_constraintStart_toEndOf="@+id/menu3summery"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/menu5summery"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/menu5button"
        app:layout_constraintBottom_toTopOf="@+id/guideline17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menu4summery"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>